--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-react-html-attrs": "^2.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "react-router-dom": "^4.1.1"
   }
 }
